# 0HourDashboard

./: README.md  main.py  package.json
app/: layout.tsx  page.tsx
app/api/chat/: route.ts
app/dashboard/: layout.tsx  page.tsx
app/dashboard/assistant/: page.tsx
app/dashboard/calendar/: page.tsx
app/dashboard/tasks/: page.tsx
components/: calendar-view.tsx  chat-interface.tsx  dashboard-header.tsx  dashboard-sidebar.tsx  tasks-list.tsx
mcp-server-demo/: main.py  pyproject.toml
