[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Google Calendar MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.10.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.0.0",
    "google-auth>=2.20.0",
]
